WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212703
Some tests in css/css-color/parsing/system-color-valid.html are failing
https://bugs.webkit.org/show_bug.cgi?id=212703
Summary
Some tests in css/css-color/parsing/system-color-valid.html are failing
Sam Weinig
Reported
2020-06-03 09:28:46 PDT
Some tests in css/css-color/parsing/system-color-valid.html are failing
Attachments
Patch
(64.01 KB, patch)
2020-06-03 11:25 PDT
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
Patch
(40.79 KB, patch)
2020-06-05 14:32 PDT
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2020-06-03 11:25:53 PDT
Created
attachment 400948
[details]
Patch
Sam Weinig
Comment 2
2020-06-03 11:26:24 PDT
I am not 100% sure about the mappings I picked. Would like feedback on them.
EWS Watchlist
Comment 3
2020-06-03 11:36:08 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Simon Fraser (smfr)
Comment 4
2020-06-04 10:22:59 PDT
Comment on
attachment 400948
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=400948&action=review
> LayoutTests/imported/w3c/web-platform-tests/css/css-color/lab-001.html:9 > + .test {color: lab(46.277% -47.562 48.583)} /* green (sRGB #008000) converted to Lab */
I think you need to update color WPT first (see
https://github.com/web-platform-tests/wpt/issues/20993
).
Darin Adler
Comment 5
2020-06-04 10:49:50 PDT
Comment on
attachment 400948
[details]
Patch Everything about this patch seems good to me. But if Simon’s comment means it should not be landed like this, please do respect that rather than landing based on my review. I don’t know what "update color WPT" means.
Sam Weinig
Comment 6
2020-06-04 13:06:57 PDT
I didn't either. Simon explained offline that the process is to update the WPT imports as its own commit, rather than doing with another change. I will do that.
Sam Weinig
Comment 7
2020-06-05 12:23:44 PDT
(In reply to Sam Weinig from
comment #6
)
> I didn't either. Simon explained offline that the process is to update the > WPT imports as its own commit, rather than doing with another change. I will > do that.
Filed 212842 to update the imports first.
Sam Weinig
Comment 8
2020-06-05 14:32:40 PDT
Created
attachment 401201
[details]
Patch
EWS
Comment 9
2020-06-05 15:05:39 PDT
Committed
r262658
: <
https://trac.webkit.org/changeset/262658
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401201
[details]
.
Radar WebKit Bug Importer
Comment 10
2020-06-05 15:06:20 PDT
<
rdar://problem/64046692
>
Brent Fulgham
Comment 11
2022-07-01 13:24:38 PDT
***
Bug 203319
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug